--- a/api/templates/index.html
+++ b/api/templates/index.html
@@ -145,7 +145,7 @@
                         </div>
                         <div class="posts-card-popular__title card-body">
                             <small class="text-muted text-uppercase">Ansiedad</small>
-                            <a class="card-title" href="{% url 'blogansiedad' %}">Como manejar la ansiedad ante el examen?</a>
+                            <a class="card-title" href="{% url 'blogansiedad' %}">{{information.titlePanel}}</a>
                         </div>
                     </div>
                 </div>
