Blog y usuarios corregidos

--- a/api/templates/index.html
+++ b/api/templates/index.html
@@ -168,7 +168,7 @@
                         </div>
                         <div class="posts-card-popular__title card-body">
                             <small class="text-muted text-uppercase">Preparacion</small>
-                            <a class="card-title" href="{% url 'blogestudio' %}">Como estudio todos los dias?</a>
+                            <a class="card-title" href="{% url 'blogestudio' %}">{{information2.titlePanel}}</a>
                         </div>
                     </div>
                 </div>
@@ -191,7 +191,7 @@
                         </div>
                         <div class="posts-card-popular__title card-body">
                             <small class="text-muted text-uppercase">Motivacion</small>
-                            <a class="card-title" href="{% url 'blogmotivado' %}">Como mantenerme motivado?</a>
+                            <a class="card-title" href="{% url 'blogmotivado' %}">{{information3.titlePanel}}</a>
                         </div>
                     </div>
                 </div>
