Cambios Paypal costos por admin

--- a/api/templates/pricing.html
+++ b/api/templates/pricing.html
@@ -84,7 +84,7 @@
                 </div>
                 <p class="d-flex justify-content-center align-items-center m-0">
                     <span class="h4 m-0 font-weight-normal">&dollar;</span>
-                    <span class="h1 m-0 font-weight-normal">299</span>
+                    <span class="h2 m-0 font-weight-normal">{{pago_Mensual.cantidadPago}}</span>
                     <span class="h4 m-0 font-weight-normal">/ al mes</span>
                 </p>
                 <p class="lh-1 text-muted mb-0"><small>Unete a la comunidad Enarm 365</small></p>
@@ -116,7 +116,7 @@
                 </div>
                 <p class="d-flex justify-content-center align-items-center m-0">
                     <span class="h4 m-0 font-weight-normal">&dollar;</span>
-                    <span class="h1 m-0 font-weight-normal">629</span>
+                    <span class="h2 m-0 font-weight-normal">{{pago_Trimestral.cantidadPago}}</span>
                     <span class="h4 m-0 font-weight-normal">/ Trimestral</span>
                 </p>
                 <p class="lh-1 text-muted mb-0"><small>Unete a la comunidad Enarm 365</small></p>
@@ -148,7 +148,7 @@
                 </div>
                 <p class="d-flex justify-content-center align-items-center m-0">
                     <span class="h4 m-0 font-weight-normal">&dollar;</span>
-                    <span class="h1 m-0 font-weight-normal">1500</span>
+                    <span class="h2 m-0 font-weight-normal">{{pago_Semestral.cantidadPago}}</span>
                     <span class="h4 m-0 font-weight-normal">/ Semestral</span>
                 </p>
                 <p class="lh-1 text-muted mb-0"><small>Unete a la comunidad Enarm 365</small></p>
@@ -180,7 +180,7 @@
                 </div>
                 <p class="d-flex justify-content-center align-items-center m-0">
                     <span class="h4 m-0 font-weight-normal">&dollar;</span>
-                    <span class="h1 m-0 font-weight-normal">3000</span>
+                    <span class="h2 m-0 font-weight-normal">{{pago_Anual.cantidadPago}}</span>
                     <span class="h4 m-0 font-weight-normal">/ al año</span>
                 </p>
                 <p class="lh-1 text-muted mb-0"><small>Unete a la comunidad Enarm 365</small></p>
