--- a/api/templates/templatecontenido.html
+++ b/api/templates/templatecontenido.html
@@ -276,6 +276,13 @@
                                         class="badge badge-notifications badge-primary text-uppercase ml-auto">Adm</span></span>
                             </a>
                         </li>
+                        <li class="sidebar-menu-item">
+                            <a class="sidebar-menu-button" href="{% url 'adminPagos' %}">
+
+                                <span class="sidebar-menu-text">Revisión Pagos <span
+                                        class="badge badge-notifications badge-primary text-uppercase ml-auto">Adm</span></span>
+                            </a>
+                        </li>
                         {% endif %}
                         <li class="sidebar-menu-item">
                             <a class="sidebar-menu-button" href="{% url 'logout' %}">
