Recuperacion de Contrasena Finalziado

--- a/api/templates/registration/password_reset_complete.html
+++ b/api/templates/registration/password_reset_complete.html
@@ -5,5 +5,16 @@
 
 
 {%block content%}
-<p>Password changed.</p>
+<h1>El password se restablecio correctamente.</h1>
+<script>
+    // Función que redirige a la nueva URL después de 5 segundos
+    function redirectToNewPage() {
+        setTimeout(function() {
+            window.location.href = "/"; // Reemplaza con la URL de destino
+        }, 3000); // 5000 milisegundos = 5 segundos
+    }
+
+    // Llamar a la función de redirección cuando la página haya cargado
+    window.onload = redirectToNewPage;
+</script>
 {%endblock%}
