--- a/api/templates/registration/password_reset_confirm.html
+++ b/api/templates/registration/password_reset_confirm.html
@@ -6,7 +6,7 @@
 
 {%block content%}
 <div class = "logincontainer"> 
-    <img class= "logoreset" src="{%static 'img/HorizontalUnaTinta.png' %}" alt="Enarm 365 Logo">
+    <img class= "logologin" src="{%static 'img/HorizontalUnaTinta.png' %}" alt="Enarm 365 Logo">
     </div>
    <form method="post" action="" class="login">
     {% csrf_token %}
