--- a/api/templates/registration/password_reset_done.html
+++ b/api/templates/registration/password_reset_done.html
@@ -5,5 +5,5 @@
 
 
 {%block content%}
-<p>Email con las instrucciones para cambiar contraseña ha sido enviado.</p>
+<h2>Email con las instrucciones para cambiar contraseña ha sido enviado.</h2>
 {%endblock%}
