--- a/api/templates/Simulator/simulator_free.html
+++ b/api/templates/Simulator/simulator_free.html
@@ -136,30 +136,25 @@
 <div class="page-section border-bottom-2">
     <div class="container page__container">
         <div class="page-separator">
-            <h5 class="page-separator__text">Conoce tu nivel - Simulador Gratuito</h5>
+            <h5 class="page-separator__text">Conoce tu nivel - Simulador Personalizado</h5>
         </div>
         <label for="">Para las preguntas a continuación, por favor elige la mejor opción para completar</label>
         <div class="posts-cards">
             <div class="card" id="preguntas">
                 <div class="pregunta-actual">
-                    {% for pregunta,respuestas_mezcladas in preguntas_con_respuestas_mezcladas %}
-                    <form action="" class="formulario-gratuito pregunta" data-question-id="{{ pregunta.idPregunta }}" id="formulario-{{ pregunta.idPregunta }} " data-justificacion="{{ pregunta.justificacionPregunta }}">
+                    {% for pregunta, respuestas_mezcladas in preguntas_con_respuestas_mezcladas %}
+                    <form action="" class="formulario-timer pregunta" data-question-id="{{ pregunta.idPregunta }}" id="formulario-{{ pregunta.idPregunta }}" data-justificacion="{{ pregunta.justificacionPregunta }}">
                         {% csrf_token %}
-                        
-                        <h5 class="title-question">Pregunta: {{ pregunta.nombrePregunta }} </h5>
-                        <div class="justificacion" style="display: none;">
-                            <p><strong>Justificación:</strong> {{ pregunta.justificacionPregunta }}</p>
-                        </div>
+                        <h5 class="title-question">Pregunta: {{ pregunta.nombrePregunta }}</h5>
                         {% for respuesta in respuestas_mezcladas %}
-                            <div class="answer_type" data-radio-id="{{ pregunta.idPregunta }}">
-                                <input type="radio" id="opcion_{{ pregunta.idPregunta }}_{{ respuesta.idRespuestas }}" name="respuesta_{{ pregunta.idPregunta }}" value="{{ respuesta.idRespuestas }}">
-                                <label for="opcion_{{ pregunta.idPregunta }}_{{ respuesta.idRespuestas }}">{{ respuesta.nombreRespuestas }}</label>
-                            </div>
+                        <div class="answer_type" data-radio-id="{{ pregunta.idPregunta }}">
+                            <input type="radio" id="opcion_{{ pregunta.idPregunta }}_{{ respuesta.idRespuestas }}" name="respuesta_{{ pregunta.idPregunta }}" value="{{ respuesta.idRespuestas }}">
+                            <label for="opcion_{{ pregunta.idPregunta }}_{{ respuesta.idRespuestas }}">{{ respuesta.nombreRespuestas }}</label>
+                        </div>
                         {% endfor %}
                         <div class="text-center mb-24pt">
                             <input type="button" class="btn btn-primary btn-lg btn-siguiente" value="Siguiente">
                         </div>
-                        
                     </form>
                     
                     {% endfor %}
@@ -167,20 +162,11 @@
                 <div class="progress-bar-simulator ">
                     <div class="progress-simulator"></div>
                 </div>
-                <p class="mx-16pt" > Total de preguntas ( {{ preguntas_con_respuestas_mezcladas|length }} )</p>
-            </div>
+                <p class="mx-16pt" >Total de Preguntas ( {{ preguntas_con_respuestas_mezcladas|length }} )</p>
+            </div>            
         </div>
     </div>
 </div>
-{% else %}
-<div class="page-section border-bottom-2">
-    <div class="container page__container">
-        <div class="page-separator">
-            <h5 class="page-separator__text">Conoce tu nivel - Simulador Gratuito</h5>
-        </div>
-        <label for="">Ya has realizado está encuesta por favor espera 24 hrs para que se active nuevamente</label>
-        </div>
-        </div>
 {% endif %}
 
 {% block js %}
@@ -200,7 +186,7 @@
             // Cuando el usuario intenta retroceder, añade de nuevo un estado falso
             window.history.pushState(null, "", window.location.href);
             // Muestra una alerta opcional
-            alert('No puedes regresar a la página anterior.');
+            alert('No puedes regresar a la página anterior hasta que termines el examen por favor.');
         };
     }
 
