--- a/api/templates/Simulator/simulator_free.html
+++ b/api/templates/Simulator/simulator_free.html
@@ -94,7 +94,6 @@
                         </div>
                         <div class="media ml-sm-auto align-items-center">
                             <div class="media-left mr-2 avatar-group">
-                               
                             </div>
                             <div class="media-body">
                                 <a href=""> {{userName}}</a>
@@ -112,7 +111,6 @@
                         </div>
                         <div class="media ml-sm-auto align-items-center">
                             <div class="media-left mr-2 avatar-group">
-                               
                             </div>
                             <div class="media-body">
                                 <a href=""> {{userName}}</a>
@@ -136,7 +134,7 @@
 <div class="page-section border-bottom-2">
     <div class="container page__container">
         <div class="page-separator">
-            <h5 class="page-separator__text">Conoce tu nivel - Simulador Personalizado</h5>
+            <h5 class="page-separator__text">Conoce tu nivel - Gratuito</h5>
         </div>
         <label for="">Para las preguntas a continuación, por favor elige la mejor opción para completar</label>
         <div class="posts-cards">
