--- a/api/templates/templatecontenido.html
+++ b/api/templates/templatecontenido.html
@@ -263,7 +263,7 @@
                             </a>
                         </li>
                         <li class="sidebar-menu-item">
-                            <a class="sidebar-menu-button" href="{% url 'revisionPreguntas' %}">
+                            <a class="sidebar-menu-button" href="{% url 'revisionPreguntas' %}?id_temario=1">
 
                                 <span class="sidebar-menu-text">Revisión de Preguntas <span
                                         class="badge badge-notifications badge-primary text-uppercase ml-auto">Adm</span></span>
