--- a/api/templates/adminTablePregunta.html
+++ b/api/templates/adminTablePregunta.html
@@ -77,6 +77,16 @@
             <div class="col-md-12 col-lg-12">
                 <div class="card">
                     <div class="card-body">
+                        <div class="col-4 mt-16pt mb-16pt m-auto text-center">
+                            <form action="{% url 'revisionPreguntas' %}" method="get">
+                                <select id="id_temario" name="id_temario" class="form-control">
+                                    {% for tema in temarios %}
+                                    <option value="{{ tema.idTemarios }}">{{ tema.nombreTemario }}</option>
+                                    {% endfor %}
+                                </select>
+                                <button type="submit" class="btn btn-primary mt-16pt">Filtrar</button>
+                            </form>
+                        </div>
                         <!-- Usuarios con pago -->
                         <div class="mb-24pt">
                             <button class="btn btn-success" data-toggle="modal" data-target="#agregarPreguntaModal">
@@ -93,6 +103,7 @@
                                         <th>Nivel Pregunta</th>
                                         <th>Categoría</th>
                                         <th>Temario</th>
+                                        <th>Justificación</th>
                                         <th>Editar</th>
                                         <th>Eliminar</th>
                                     </tr>
@@ -105,6 +116,7 @@
                                         <td class="text-center">{{pregunta.nivelPregunta}}</td>
                                         <td class="text-center">{{pregunta.fkCategorias.descripcionCategoria}}</td>
                                         <td class="text-center">{{pregunta.fkTemarios.nombreTemario}}</td>
+                                        <td class="text-center">{{pregunta.}}</td>
                                         <form action="" method="post" class="edit_preguntas">
                                             <input type="hidden" name="id_pregunta" value="{{ pregunta.idPregunta }}">
                                             <td class="text-justify">
