--- a/api/templates/adminTablePregunta.html
+++ b/api/templates/adminTablePregunta.html
@@ -116,7 +116,7 @@
                                         <td class="text-center">{{pregunta.nivelPregunta}}</td>
                                         <td class="text-center">{{pregunta.fkCategorias.descripcionCategoria}}</td>
                                         <td class="text-center">{{pregunta.fkTemarios.nombreTemario}}</td>
-                                        <td class="text-center">{{pregunta.}}</td>
+                                        <td class="text-justify">{{pregunta.justificacionPregunta}}</td>
                                         <form action="" method="post" class="edit_preguntas">
                                             <input type="hidden" name="id_pregunta" value="{{ pregunta.idPregunta }}">
                                             <td class="text-justify">
