--- a/api/templates/templatecontenido.html
+++ b/api/templates/templatecontenido.html
@@ -270,7 +270,7 @@
                             </a>
                         </li>
                         <li class="sidebar-menu-item">
-                            <a class="sidebar-menu-button" href="{% url 'revisionRespuestas' %}">
+                            <a class="sidebar-menu-button" href="{% url 'revisionRespuestas' %}?id_categoria=1">
 
                                 <span class="sidebar-menu-text">Revisión de Respuestas <span
                                         class="badge badge-notifications badge-primary text-uppercase ml-auto">Adm</span></span>
