--- a/api/templates/adminTableRespuestas.html
+++ b/api/templates/adminTableRespuestas.html
@@ -77,6 +77,16 @@
             <div class="col-md-12 col-lg-12">
                 <div class="card">
                     <div class="card-body">
+                        <div class="col-4 mt-16pt mb-16pt m-auto text-center">
+                            <form action="{% url 'revisionRespuestas' %}" method="get">
+                                <select id="id_categoria" name="id_categoria" class="form-control">
+                                    {% for categoria in categorias %}
+                                    <option value="{{ categoria.idCategoria }}">{{ categoria.descripcionCategoria }}</option>
+                                    {% endfor %}
+                                </select>
+                                <button type="submit" class="btn btn-primary mt-16pt">Filtrar</button>
+                            </form>
+                        </div>
                         <!-- Usuarios con pago -->
                         <div class="mb-24pt">
                             <button class="btn btn-success" data-toggle="modal" data-target="#agregarRespuestaModal">
